--- a/.copilot-notes.tienda3d.md
+++ b/.copilot-notes.tienda3d.md
@@ -1,6 +1,6 @@
 # Notas internas – Tienda3D (solo para asistente)
 
-Instantánea del proyecto para acelerar comprensión y navegación técnica.
+Instantánea del proyecto para acelerar comprensión y navegación técnica. (Actualizado: incluye auth admin JWT y endpoints revisados.)
 
 ## Stack y arquitectura
 - Go 1.22 (módulo: github.com/phenrril/tienda3d)
@@ -10,6 +10,7 @@ Instantánea del proyecto para acelerar comprensión y navegación técnica.
 - Pagos: MercadoPago (preferencias de checkout; sandbox/prod según token y APP_ENV)
 - Storage local de archivos en `uploads/` (imágenes y modelos)
 - OAuth Google opcional; notificaciones Telegram y/o email (SMTP) opcionales
+- Autenticación Admin JWT (API key + email permitido) para endpoints de gestión y listado de órdenes
 
 ## Entradas principales
 - cmd/tienda3d/main.go: carga .env, init logger, abre DB, NewApp, auto-migraciones/backfill, crea http.Server con handler de app, bind en PORT (fallback 8081–8090 si ocupado), shutdown gracioso.
@@ -18,21 +19,22 @@ Instantánea del proyecto para acelerar comprensión y navegación técnica.
 ## HTTP (internal/adapters/httpserver)
 - Middlewares: RequestID, Logging, Recovery, Gzip, RateLimit(60 rpm para /api/*)
 - Rutas estáticas: /public/* (public/), /uploads/* (uploads/)
-- SSR: 
-  - / · /products · /product/{slug} · /quote/{id} · /checkout · /pay/{orderID}
+- SSR: `/`, `/products`, `/product/{slug}`, `/quote/{id}`, `/checkout`, `/pay/{orderID}`
 - Cart (cookie firmada): /cart (GET/POST), /cart/update, /cart/remove, /cart/checkout
-- API JSON:
+- API JSON protegida por JWT admin (Bearer):
   - POST /api/products (crear)
   - GET /api/products (listar)
   - GET /api/products/{slug} (detalle por slug)
   - DELETE /api/products/{slug} (borrado completo + archivos)
   - POST /api/products/delete (borrado masivo simple)
   - POST /api/products/upload (multipart: producto + múltiples imágenes)
+  - GET /admin/orders (listado paginado de órdenes)
+- API pública:
   - POST /api/quote (cotizar UploadedModel)
   - POST /api/checkout (orden desde quote)
   - POST /webhooks/mp (webhook MercadoPago)
 - Auth Google: /auth/google/login · /auth/google/callback · /logout
-- Admin: POST /admin/login (JWT HMAC propio, require ADMIN_API_KEY + ADMIN_ALLOWED_EMAILS) · GET /admin/orders (paginado)
+- Admin login: POST /admin/login (header X-Admin-Key, opcional email) -> JWT expira ~30m.
 
 ## Dominio (internal/domain)
 - Entidades: Product, Variant, Image, Order (+OrderItem), Quote, UploadedModel, Customer, Page
@@ -43,52 +45,57 @@ Instantánea del proyecto para acelerar comprensión y navegación técnica.
 - OrderRepo: Save (Create/update) · FindByID · FindByPreferenceID · UpdateStatus · List
 - UploadedModelRepo: Save · FindByID
 - CustomerRepo: FindByEmail · Save
-- NOTA: No hay implementación de QuoteRepo (gap)
+- NOTA (gap): No hay implementación de QuoteRepo (pero interfaz existe).
 
 ## Casos de uso (internal/usecase)
 - ProductUC: List/GetBySlug/Create/AddImages/DeleteBySlug/DeleteFullBySlug
 - OrderUC: CreateFromQuote(quote->order), UpdateStatus
 - PaymentUC: CreatePreference (delegado al gateway)
-- QuoteUC: CreateFromModel/Reprice (requiere repos Models + Quotes, PricingService y Clock). Wiring actual no inicializa QuoteUC y no hay QuoteRepo (gap).
+- QuoteUC: CreateFromModel/Reprice (requiere repos Models + Quotes, PricingService y Clock). Wiring actual no inicializa QuoteUC ni QuoteRepo (gap operativo para /api/quote si se invoca).
 
 ## Pricing (internal/adapters/pricing/simple)
 - Fórmula simple: precio por volumen + tiempo + ajuste por layer + factor por infill + margen; retorna breakdown.
 
 ## Pagos (internal/adapters/payments/mercadopago)
-- CreatePreference: arma items (incluye envío si corresponde), back_urls a /pay/{orderID}, notification_url /webhooks/mp, external_reference firmado (HMAC con SECRET_KEY). Selección sandbox/prod según token y APP_ENV.
+- CreatePreference: items (incluye envío si corresponde), back_urls `/pay/{orderID}`, notification_url `/webhooks/mp`, external_reference firmado (HMAC con SECRET_KEY). Selección sandbox/prod según token y APP_ENV.
 - PaymentInfo: GET /v1/payments/{id}; retorna (status, external_reference)
 - VerifyExternalRef: valida external_reference (orderID|sig)
-- Webhook handler actual: consulta PaymentInfo, verifica external ref, actualiza Order.Status/MPStatus; trigger notificaciones (Telegram preferente, email fallback si SMTP).
+- Webhook: consulta PaymentInfo, valida ref, actualiza Order.Status/MPStatus; dispara notificaciones.
 
 ## Storage (internal/adapters/storage/localfs)
-- SaveImage/SaveModel: guarda en uploads/{images|models}/<nsec>-<filename>, retorna ruta local. El server normaliza prefijo "/" para servir vía /uploads/*.
+- SaveImage/SaveModel: `uploads/{images|models}/<nsec>-<filename>`; rutas servidas por /uploads/*.
 
 ## Templates (internal/views)
 - Embebidos via go:embed (*.html, admin/*.html)
-- SSR existentes: layout, home, products, product, cart, checkout, pay. En admin solo existe admin/dashboard.html.
-- NOTA: Server renderiza "admin_orders.html" (no existe) -> error de template al visitar /admin/orders (gap).
+- Admin carpeta contiene: auth.html, dashboard.html, orders.html, products.html, sales.html
+- GAP: handler usa `admin_orders.html` pero existe `orders.html` (mismatch de nombre) -> error potencial.
 
 ## Docker/DevOps
-- Makefile: dev/build/test/run, docker-build, docker-run (docker compose up)
-- Dockerfile (multi-stage): usa golang:1.25-alpine (ojo: módulo declara go 1.22); COPY "../.." dentro del build stage (sospechoso; fuera del contexto). Runtime alpine, copia binario y assets, expone 8080.
-- docker-compose.yml: build: "../.." (sospechoso desde raíz; probable error de contexto). Servicios: db (Postgres), app, caddy. Volúmenes mapean uploads/ y public/. Healthchecks incluidos.
+- Makefile: targets dev/build/test/run, docker-build, docker-run
+- Dockerfile: multi-stage; revisar COPY context (posible inconsistencia con build root)
+- docker-compose.yml: incluye db (Postgres), app, caddy; variables via .env; mappea uploads/ y public/.
 
-## Hallazgos / Riesgos a revisar
-1) Quote: faltan repositorio (QuoteRepo) e inicialización de QuoteUC en app.NewApp(). Endpoints /quote/* y /api/quote /api/checkout podrían panicar.
-2) Admin vista: server espera template "admin_orders.html" pero repo tiene admin/dashboard.html.
-3) Docker: paths de build en Dockerfile y docker-compose parecen incorrectos para un compose en la raíz; revisar contexto y COPY.
-4) Seguridad: cookies HMAC (cart/sess) no cifradas; SECRET_KEY/SESSION_KEY necesarios en prod. ADMIN_API_KEY + ADMIN_ALLOWED_EMAILS obligatorios para admin.
-5) Envíos: costo fijo por provincia en código (provinceCosts=9000); pendiente parametrización.
+## Seguridad
+- JWT admin firmado con `JWT_ADMIN_SECRET` (fallback SECRET_KEY). Expira ~30m.
+- ADMIN_API_KEY + ADMIN_ALLOWED_EMAILS obligatorios para proteger creación/borrado productos.
+- Cookies de carrito firmadas (no cifradas) con SESSION_KEY.
+
+## Hallazgos / Riesgos pendientes
+1. Quote flow incompleto (faltan wiring + repositorio real) -> endpoints de quote pueden fallar.
+2. Mismatch template `admin_orders.html` vs archivo existente `orders.html`.
+3. Docker build context/COPY podrían romper build en producción.
+4. Costos de envío hardcodeados (`provinceCosts`).
 
 ## Quick start (local)
-- go run ./cmd/tienda3d (requiere DB_DSN o Postgres local; por defecto usa host=localhost user=postgres password=postgres db=tienda3d)
-- Variables útiles: PORT, APP_ENV, MP_ACCESS_TOKEN (TEST-...), PUBLIC_BASE_URL, BASE_URL, SESSION_KEY, SECRET_KEY, STORAGE_DIR
+```
+go run ./cmd/tienda3d
+```
+Variables claves: PORT, APP_ENV, MP_ACCESS_TOKEN (TEST-...), PUBLIC_BASE_URL, BASE_URL, SESSION_KEY, SECRET_KEY, ADMIN_API_KEY, ADMIN_ALLOWED_EMAILS.
 
-## Mapa de archivos clave
-- main.go · app/app.go · adapters/httpserver (server.go, middlewares.go)
-- adapters/repo/postgres (product_repo.go, order_repo.go, uploaded_model_repo.go, customer_repo.go)
-- adapters/payments/mercadopago/gateway.go
-- adapters/pricing/simple/service.go
-- domain/*.go · usecase/*.go · views/*.html
+## Endpoints resumen
+- Admin login: POST /admin/login (X-Admin-Key)
+- Admin/orders: GET /admin/orders (Bearer)
+- Productos (Bearer): POST/GET /api/products, GET /api/products/{slug}, DELETE /api/products/{slug}, POST /api/products/delete, POST /api/products/upload
+- Públicos: POST /api/quote, POST /api/checkout, POST /webhooks/mp, SSR páginas básicas.
 
 -- Fin --
